--- a/arquivos/css/style.css
+++ b/arquivos/css/style.css
@@ -8,7 +8,7 @@
 }
 
 main {
-    background: linear-gradient(120deg, #6ebbd5, 	#7B68EE);
+    background: linear-gradient(120deg, #fff, 	#cbf8dc);
     width: 100%;
     min-height: 100vh;
     display: flex;
@@ -37,7 +37,7 @@ main {
     font-size: 35px;
     font-weight: 700;
     border-bottom: solid 5px #00BF63;
-    margin-bottom: 20px;
+    padding-bottom: 26px;
   }
 
   .input {
@@ -54,8 +54,8 @@ main {
     border-radius: 5px;
     border:none;
     outline: 0;
-    font-size: 41px;
-    font-weight: 700;
+    font-size: 20px;
+    font-weight: 500;
     text-align: center;
   }
 
@@ -64,4 +64,30 @@ main {
     font-weight: 600;
   }
 
-  pablo.lima@inkluziva.org
+  button{
+    width: 300px;
+    height: 40px;
+    font-size: 20px;
+    font-weight: 600;
+    background: #00BF63;
+    color: #fff;
+    outline: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  .result{
+    display: flex;
+    margin-top: 20px;
+    align-items: center;
+    width: 300px;
+    height: 150px;
+    border-radius: 5px;
+    font: italic 1.5rem serif;
+    box-shadow: 0px 0px 6px black;
+    background: #00BF63;
+    color: black;
+    padding: 20px;
+    box-sizing: border-box;
+    user-select: none;
+  }
