--- a/arquivos/css/style.css
+++ b/arquivos/css/style.css
@@ -8,7 +8,7 @@
 }
 
 main {
-    background: linear-gradient(120deg, #fff, 	#cbf8dc);
+    background: linear-gradient(120deg, #fff, 	#e2ffed);
     width: 100%;
     min-height: 100vh;
     display: flex;
